# Development-Board-OSRCORE-Example

./: .gitignore  404.html  I18N_TASKS.html  MAINTAINING_I18N.html  README.md  README_zh.md  chapter-00.html  chapter-01.html  chapter-02.html  chapter-03.html  chapter-04.html  chapter-05.html  chapter-06.html  chapter-07.html  chapter-08.html  chapter-09.html  chapter-10.html  chapter-11.html  chapter-12.html  chapters.html  flash.html  hashmap.json  index.html  partitions_ota.csv  tutorial_zh.html  updater.html
01_blink_led/: CMakeLists.txt
02_buzzer/: CMakeLists.txt  sdkconfig.defaults
03_pwm_servo/: CMakeLists.txt
04_sbus_rc/: CMakeLists.txt
05_imu_i2c/: CMakeLists.txt
06_encoder/: CMakeLists.txt
07_nvs/: CMakeLists.txt
08_freertos/: CMakeLists.txt  sdkconfig.defaults
09_pid_motor/: CMakeLists.txt
10_ahrs/: CMakeLists.txt
11_full_example/: CMakeLists.txt
11_mag_compass/: CMakeLists.txt
12_full_example/: CMakeLists.txt
12_full_example/main/: CMakeLists.txt  imu_heater.c  imu_heater.h  madgwick.c  madgwick.h  main.c  pid.c  pid.h  qmi8658.c  qmi8658.h
12_mag_compass/: CMakeLists.txt
13_factory_demo/: CMakeLists.txt
assets/: I18N_TASKS.md.9ePpXSf9.js  I18N_TASKS.md.9ePpXSf9.lean.js  I18N_TASKS.md.B1AWrEVG.js  I18N_TASKS.md.B1AWrEVG.lean.js  I18N_TASKS.md.BH_DoF64.js  I18N_TASKS.md.BH_DoF64.lean.js  I18N_TASKS.md.BPZjUzZI.js  I18N_TASKS.md.BPZjUzZI.lean.js  I18N_TASKS.md.BRKbKWU2.js  I18N_TASKS.md.BRKbKWU2.lean.js  I18N_TASKS.md.C6UxTsOx.js  I18N_TASKS.md.C6UxTsOx.lean.js  I18N_TASKS.md.CIFKkVPP.js  I18N_TASKS.md.CIFKkVPP.lean.js  (+568 more)
(+248 files in other folders)
