idf_component_register(
    SRCS
        "main.c"
        "qmi8658.c"
        "madgwick.c"
        "pid.c"
        "imu_heater.c"
    INCLUDE_DIRS "."
    PRIV_REQUIRES
        esp_adc
        esp_timer
        esp_system
        nvs_flash
        esp_driver_i2c
        esp_driver_pcnt
        esp_driver_ledc
        esp_driver_uart
        esp_driver_gpio
        esp_driver_usb_serial_jtag
        freertos
        osrcore_fw_update
)
